--- a/src/app/widgets/timeline/timeline.component.html
+++ b/src/app/widgets/timeline/timeline.component.html
@@ -1,3 +1,4 @@
+<!-- <app-date-picker (selectDate)="selectDate($event)" /> -->
 <app-add-event-button
   (addEvent)="addEvent()"
   [disabled]="canAddNewEvent() !== true" />
