--- a/src/app/layout/share/auth-control-button/auth-control-button.component.html
+++ b/src/app/layout/share/auth-control-button/auth-control-button.component.html
@@ -1,9 +1,12 @@
 <button class="btn btn-primary" (click)="onClick()">
-  @if (isLoading()) {
+  @if ((isLoading | async) === true) {
     <span class="loading loading-spinner"></span>
   }
-  @if (authorizedUser()) {
-    Profile
+  @if (user | async; as u) {
+    <div class="avatar">
+      <div class="w-8 rounded"><img [src]="u.avatar" [alt]="u.name" /></div>
+    </div>
+    {{ u.name }}
   } @else {
     <ng-icon name="saxLoginOutline" size="24"></ng-icon>
     Login
