--- a/src/app/pages/non-authorized/login/widgets/login/login-container.component.html
+++ b/src/app/pages/non-authorized/login/widgets/login/login-container.component.html
@@ -1,8 +1,8 @@
 <button
   class="btn btn-primary"
   (click)="login()"
-  [attr.disabled]="isLoading() ? true : null">
-  @if (isLoading()) {
+  [attr.disabled]="(isLoading | async) ? true : null">
+  @if ((isLoading | async) === true) {
     <span class="loading loading-spinner"></span>
   } @else {
     <ng-icon name="saxLogin1Outline" size="24"></ng-icon>
