--- a/src/app/pages/non-authorized/login/login-page.component.html
+++ b/src/app/pages/non-authorized/login/login-page.component.html
@@ -4,11 +4,23 @@
       <div class="hero rounded-xl bg-base-200 p-16">
         <div class="hero-content flex-col lg:flex-row-reverse">
           <div class="max-w-lg">
-            <h1 class="text-5xl font-bold">Login with Google</h1>
+            <h1 class="text-5xl font-bold">
+              @if ((isAuthorised | async) === false) {
+                Login with Google
+              } @else {
+                Thank you for authorizing on our service
+              }
+            </h1>
             <p class="pb-14 pt-6">
-              You must be signed in to your Google account to use Timeline.
+              @if ((isAuthorised | async) === false) {
+                You must be signed in to your Google account to use Timeline
+              } @else {
+                You will now be redirected to the service
+              }
             </p>
-            <app-login-container />
+            @if ((isAuthorised | async) === false) {
+              <app-login-container />
+            }
           </div>
         </div>
       </div>
