feat: add logout action

--- a/src/app/layout/share/auth-control-button/auth-control-button.component.html
+++ b/src/app/layout/share/auth-control-button/auth-control-button.component.html
@@ -19,6 +19,6 @@
     tabindex="0"
     class="menu dropdown-content z-[1] mt-4 w-52 rounded-box bg-base-300 p-2 shadow">
     <li></li>
-    <li><a>Logout</a></li>
+    <li><a (click)="logout()" (keyup)="logout()" tabindex="0">Logout</a></li>
   </ul>
 </div>
