refactor: refactor showint timeline events

--- a/src/app/widgets/timeline/add-event-form/add-event-form.component.html
+++ b/src/app/widgets/timeline/add-event-form/add-event-form.component.html
@@ -27,7 +27,7 @@
   <!--   add tags</a -->
   <!-- > -->
 </div>
-<div class="rounded bg-stone-700 px-4 pb-4 pt-2">
+<div>
   @if (this.activeStep() === 0) {
     <label class="form-control">
       <div class="label">
