fix: fix menu again

--- a/src/app/widgets/timeline/event/menu/menu.component.html
+++ b/src/app/widgets/timeline/event/menu/menu.component.html
@@ -1,4 +1,4 @@
-@if (timelineEvent().id !== null) {
+@if (timelineEvent().id) {
   <ul class="bg-lighter menu menu-horizontal gap-2 rounded-box">
     <li>
       <a class="btn btn-ghost btn-sm">
