fix: remove signal store og timeline

--- a/src/app/widgets/timeline/timeline.component.html
+++ b/src/app/widgets/timeline/timeline.component.html
@@ -1,4 +1,4 @@
-@if (timeline().length > 0) {
+@if (timeline()) {
   <app-add-event-button
     (addEvent)="addEvent()"
     [disabled]="canAddNewEvent() !== true" />
