--- a/src/app/widgets/timeline-container/timeline-container.component.html
+++ b/src/app/widgets/timeline-container/timeline-container.component.html
@@ -18,12 +18,24 @@
           сreate a dynamic story of your life by adding milestones, memories,
           and achievements.
         </p>
-        <button
-          class="btn btn-accent btn-lg text-base-content"
-          (click)="addTimeLine()">
-          <ng-icon name="saxHierarchySquare3Outline" size="32"></ng-icon>create
-          timeline
-        </button>
+        <div class="flex items-center">
+          <button
+            class="btn btn-accent btn-lg text-base-content"
+            (click)="toggleAddTimelineForm()">
+            <ng-icon name="saxHierarchySquare3Outline" size="32"></ng-icon
+            >create timeline
+          </button>
+          <div class="join ms-4" [class.hidden]="!showAddTimelineWindow()">
+            <input
+              class="input join-item input-bordered"
+              placeholder="add a name"
+              name="timelineName"
+              [formControl]="form.controls.timelineName" />
+            <button class="btn btn-primary join-item" (click)="addTimeline()">
+              add
+            </button>
+          </div>
+        </div>
       </div>
     </div>
   </div>
