--- a/src/app/layout/share/modal/modal.component.html
+++ b/src/app/layout/share/modal/modal.component.html
@@ -1,5 +1,5 @@
-<dialog #modal class="modal modal-middle">
-  <div class="modal-box w-max">
+<dialog #modal class="modal">
+  <div class="modal-box max-w-3xl">
     <form method="dialog" (submit)="onClosed.emit(true)">
       <button class="btn btn-circle btn-ghost btn-sm absolute right-2 top-2">
         ✕
