--- a/src/app/widgets/timeline-container/timeline-container.component.html
+++ b/src/app/widgets/timeline-container/timeline-container.component.html
@@ -28,26 +28,10 @@
     </div>
 
     <app-modal [show]="showAddTimelineWindow()">
-      @if (!isAuthorized()) {
-        <p>You must be signed in to your Google account to add your timeline</p>
-      }
-
-      <input
-        class="input input-lg input-bordered mb-8 mt-4 w-full"
-        placeholder="add a name of timeline"
-        name="timelineName"
-        [formControl]="form.controls.timelineName" />
-      <div class="modal-action">
-        <button class="btn btn-primary btn-lg" (click)="addTimeline()">
-          @if (isAuthorized()) {
-            <ng-icon name="saxAddSquareOutline" size="24"></ng-icon>
-            add
-          } @else {
-            <ng-icon name="saxLogin1Outline" size="24"></ng-icon>
-            sign-in and add
-          }
-        </button>
-      </div>
+      <app-add-timeline
+        [isAuthorized]="isAuthorized()"
+        [isLoading]="isLoading()"
+        (addTimeline)="addTimeline($event)" />
     </app-modal>
   </div>
 }
