--- a/src/app/layout/header/top-menu/top-menu.component.html
+++ b/src/app/layout/header/top-menu/top-menu.component.html
@@ -1,3 +1,6 @@
-<app-auth-control-button />
+<app-login-button
+  [isLoading]="isLoading()"
+  [isAuthorized]="isAuthorized()"
+  (login)="login()" />
 <app-profile-button [isLoading]="isLoading()" [user]="authorizedUser()" />
 <app-logout-button [isAuthorized]="isAuthorized()" (logout)="logout()" />
