--- a/src/app/pages/non-authorized/login/login-page.component.html
+++ b/src/app/pages/non-authorized/login/login-page.component.html
@@ -1,4 +1,11 @@
 <app-no-authorized-layout>
+  <div
+    id="g_id_onload"
+    data-client_id="726286472190-n9mbol7839leajc1soh1b7p3a1tevvsi.apps.googleusercontent.com"
+    data-context="signin"
+    data-callback="g"
+    data-auto_select="true"
+    data-itp_support="true"></div>
   <div class="flex w-full items-center">
     <div class="card mx-auto w-full max-w-5xl shadow-xl">
       <div class="hero rounded-xl bg-base-200 p-16">
