--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -14,6 +14,7 @@
       [isLoading]="isLoading()"
       [isAuthorized]="isAuthorized()"
       (login)="login()" />
+    <app-copy-token [token]="token()" />
     <app-profile-button [isLoading]="isLoading()" [user]="authorizedUser()" />
     <app-logout-button [isAuthorized]="isAuthorized()" (logout)="logout()" />
   </div>
